--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
       </div>
       <div class="tokyo__pin-map">
         <div class="pin  pin__main" role="button" tabindex="0" aria-pressed="false"><img src="img/main-pin-image.png" alt="Main Pin" class="rounded" width="40" height="44"></div>
-        <div class="pin  pin--active" style="left: 700px;top: 350px"><img src="img/avatars/avatar.png" alt="User Avatar" class="rounded" width="40" height="40"></div>
-        <div class="pin" style="left: 400px;top: 400px"><img src="img/avatars/simpson.png" alt="User Avatar" class="rounded" width="40" height="40"></div>
-        <div class="pin"><img src="img/avatars/default.png" alt="User Avatar" class="rounded" width="40" height="40"></div>
+        <div class="pin  pin--active" style="left: 700px;top: 350px"  role="button" tabindex="0" aria-pressed="false"><img src="img/avatars/avatar.png" alt="User Avatar" class="rounded" width="40" height="40"></div>
+        <div class="pin" style="left: 400px;top: 400px"  role="button" tabindex="0" aria-pressed="false"><img src="img/avatars/simpson.png" alt="User Avatar" class="rounded" width="40" height="40"></div>
+        <div class="pin"><img src="img/avatars/default.png" alt="User Avatar" class="rounded" width="40" height="40"  role="button" tabindex="0" aria-pressed="false"></div>
       </div>
       <div class="dialog" role="dialog">
         <div class="dialog__title"><img src="img/avatars/avatar.png" alt="Avatar" width="70" height="70">
